--- a/cs_exams.html
+++ b/cs_exams.html
@@ -11,6 +11,7 @@
     <!-- Sidebar Navbar -->
     <div class="navbar">
         <h2> exit Exams computer science</h2> 
+        <button onclick="loadExam('csR')">csR Exam</button> 
         <button onclick="loadExam('moe2016')">moe2016 Exam</button> 
         <button onclick="loadExam('moe2017')">moe2017 Exam</button> 
 <button onclick="loadExam('AAU2023')">AAU2023 Exam</button> 
@@ -68,6 +69,7 @@
     <script src="cs_exams.js"></script>
 </body>
 </html>
+
 
 
 
